--- a/InputSearch/Views/Shared/_Layout.cshtml
+++ b/InputSearch/Views/Shared/_Layout.cshtml
@@ -6,8 +6,10 @@
     <title>@ViewData["Title"] - InputSearch</title>
 
     <link rel="stylesheet" href="~/css/bootstrap/bootstrap.css" />
+    <link rel="stylesheet" href="~/css/bootstrap/bootstrap-grid.css" />
+    <link rel="stylesheet" href="~/css/bootstrap/bootstrap-reboot.css" />
+    <link rel="stylesheet" href="~/css/bootstrap/bootstrap-utilities.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/InputSearch.styles.css" asp-append-version="true" />
 
 </head>
 <body>
@@ -41,8 +43,8 @@
         @RenderBody()
     </main>
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/bootstrap/bootstrap.js"></script>
+    <script src="~/js/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/API.js" asp-append-version="true"></script>
     <script src="https://kit.fontawesome.com/8c57d5d3d6.js" crossorigin="anonymous"></script>
